--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,7 @@
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link
-      rel="icon"
-      type="image/x-icon"
-      href="img/android-chrome-512x512.png"
-    />
+    <link rel="icon" type="image/x-icon" href="img/favicon.ico" />
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <!-- MK Lightbox -->
